# bayestracking

./: CMakeLists.txt  bayes_trackingConfig.cmake.in
include/bayes_tracking/: jpda.h  models.h  multitracker.h
src/bayes_tracking/: models.cpp
